Fixed navigation and spacing issues

--- a/styles/style.css
+++ b/styles/style.css
@@ -27,6 +27,10 @@ body {
 html {
   scroll-behavior: smooth;
 }
+section {
+  padding-bottom: 50px;
+  padding-top: 50px;
+}
 
 
 /* /////////////////////////////////
